:bug: Fixed ui bug with cities toggle spacing

--- a/frontend/src/css/Nav.css
+++ b/frontend/src/css/Nav.css
@@ -95,7 +95,7 @@
     margin-left: 2.2em;
 }
 #cities-api-toggle {
-    margin-top: -4.1em;
+    margin-top: -4.5em;
     margin-left: 10.2em;
 }
 
@@ -230,7 +230,7 @@ input:checked + .slider:before {
         margin-top: 0;
     }
     #cities-api-toggle {
-        margin-top: -3.6em;
+        margin-top: -3.9em;
     }
     .nav-bg {
         width: 98vw;
@@ -350,8 +350,8 @@ input:checked + .slider:before {
             left: 0.5rem;
         }
         #cities-api-toggle {
-            margin-top: -2em;
-            margin-left: 10.2em;
+            margin-top: -2.4em;
+            margin-left: 10.5em;
         }
         button.dark-light-toggle[data-toggled='false'] {
             left: 87vw;
